# punkin-pi

./: .gitignore  EMPTY-TURNS-ANALYSIS.md  EMPTY-TURNS-FIX.md  INDEX.md  README.md  TURN-COUNTER-FIX.md  build-local.sh  ffi-napi-4.0.3.tgz  local-build.sh  package-lock.json  package.json  ref-napi-3.0.3.tgz  ref-struct-di-1.1.1.tgz
dcp/: HANDOFF.md
dcp/specs/: 00-INDEX.md  01-store.md
docs/: HANDOFF-async-subagents.md  HANDOFF-mega_v1_20260224T000340NYC.md  HANDOFF-viewport-fix-and-config_v1_20260223T224900NYC.md  handle-tools.md  tool-type-signatures.md
docs/handoffs/: HANDOFF-assistant-wrapping-fix_v1_20260305T2308NYC.md  HANDOFF-async-subagents.md  HANDOFF-brackets-protocol_v1_20260227T1319NYC_9c77408b9c90.md  HANDOFF-empty-response-fix_v1_20260307T2030NYC_560192a3.md  HANDOFF-harness-thinking-abort-fixes_v1_20260307T1608NYC_8141b9ec7d98.md  HANDOFF-mega_v1_20260224T000340NYC.md  HANDOFF-provider-metadata-and-turn-boundaries_v1_20260307T1701NYC.md  HANDOFF-provider-metadata_v1_20260303T2326NYC.md  HANDOFF-provider-metadata_v2_20260303T2335NYC.md  HANDOFF-session-turnbrackets_v1_20260226T2043NYC_c7bd0348a3ab.md  HANDOFF-session2-wip_v1_20260223T230500NYC.md  HANDOFF-session3_v1_20260224T022500NYC.md  HANDOFF-session4_v1_20260224T143701NYC_6da65696650c.md  (+8 more)
hs-tui/: punkin-tui.cabal
hs-tui/src/Punkin/: Types.hs
specs/: 01-store.md  03-dsml.md  INDEX.md  carterkit-protocol.md  context-dsl.md  design.md  kage-no-bushin.md  openrouter-model-enhancement-rfc.md  shell-hooks.md  tool-interface-design.md  transcript-slicing.md  turn-boundary-rendering.md
(+5 files in other folders)
